--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: " I Wake up every morning feeling like I can change the world"
 ---
 
 {% for post in paginator.posts %}
