updated about page

--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 ---
-layout: page
-title: "About"
-description: "This is what I do."
+layout: about
+title: "about"
+description: "The quickest way to know more about me"
 header-img: "img/about-bg.jpg"
+alt-title: "Colle Owino"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>Well, I am a self taught software engineer although I prefer the term software developer.
+I started coding straight after high school and never looked back</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>I believe that the true value in technology lies in helping people solve problems on their own terms, in a way that seems most natural to them. 
+That means that they software we create must always be user friendly within the context in which it is to be deployed.
+To a great extent its not really about which programming languages you use but rather about how much value your end users derive from its usage.</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>What am I after? Well... I seek challenges, tell me something is difficult and I will be interested, Tell me its impossible and now am ecstatic.
+Then I spend hours and even days trying to prove you wrong. Although I concede that there are some problems that just can't be solved and am OK with that :-)</p>
