--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ alt-title: "Colle Owino"
 I started coding straight after high school and never looked back</p>
 
 <p>I believe that the true value in technology lies in helping people solve problems on their own terms, in a way that seems most natural to them. 
-That means that they software we create must always be user friendly within the context in which it is to be deployed.
+That means that the software we create must always be user friendly within the context in which it is to be deployed.
 To a great extent its not really about which programming languages you use but rather about how much value your end users derive from its usage.</p>
 
 <p>What am I after? Well... I seek challenges, tell me something is difficult and I will be interested, Tell me its impossible and now am ecstatic.
