--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
-layout: about
-title: "about"
+layout: page
+title: about
 description: "The quickest way to know more about me"
 header-img: "img/about-bg.jpg"
 alt-title: "Colle Owino"
