--- a/about.html
+++ b/about.html
@@ -15,3 +15,8 @@ To a great extent its not really about which programming languages you use but r
 
 <p>What am I after? Well... I seek challenges, tell me something is difficult and I will be interested, Tell me its impossible and now am ecstatic.
 Then I spend hours and even days trying to prove you wrong. Although I concede that there are some problems that just can't be solved and am OK with that :-)</p>
+
+<a href="#">
+    <img src="{{ site.baseurl }}/img/perfect-person.jpg" alt="Post Sample Image">
+</a>
+
