--- a/pages/category.html
+++ b/pages/category.html
@@ -50,7 +50,7 @@ isNavItem: true
                         <a class="readmore" href="{{ post.url | prepend: site.baseurl }}">Read More</a>
                         <footer>
                             {% for tag in post.tags %}
-                            <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
+                            <a class="word-keep" href="{{ site.baseurl }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
                             {% endfor %}
                         </footer>
                     </div>
@@ -76,7 +76,7 @@ isNavItem: true
                         <a class="readmore" href="{{ post.url | prepend: site.baseurl }}">Read More</a>
                         <footer>
                             {% for tag in post.tags %}
-                            <a class="word-keep" href="{{ site.baseurl | prepend: site.url }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
+                            <a class="word-keep" href="{{ site.baseurl }}/tags/#{{ tag }}"><span class="octicon octicon-tag"></span>&nbsp;{{ tag }}</a>
                             {% endfor %}
                         </footer>
                     </div>
