--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: home
     <div class="avatar">
     <img class="img-circle" src="{{ site.baseurl }}static/img/{{ site.avatar }}" alt="Responsive image">
     </div>
-    <h3>I'm <strong>{{ site.author.name }}</strong>, </br> a {{ site.job }}.</h3>
+    <h3>I'm <strong>{{ site.author.name }}</strong>, </br>A {{ site.job }}.</h3>
     <h3 class="describe">{{ site.description }}</h3>
     <h3> {{ site.ask }}, </br> contact me at <a href="http://twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or by <a href="mailto:{{ site.email }}">email</a>.</h3>
     {% include social.html %}
