--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ I started coding straight after high school and never looked back</p>
 That means that the software we create must always be user friendly within the context in which it is to be deployed.
 To a great extent its not really about which programming languages you use but rather about how much value your end users derive from its usage.</p>
 
-<p>What am I after? Well... I seek challenges, tell me something is difficult and I will be interested, Tell me its impossible and now am ecstatic.
+<p>What am I after? Well... I seek challenges, I can solve with code. Tell me something is difficult and I will be interested, Tell me its impossible and now am ecstatic.
 Then I spend hours and even days trying to prove you wrong. Although I concede that there are some problems that just can't be solved and am OK with that :-)</p>
 
 <a href="#">
